--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <a href="Admin.html"><h1>ADMIN</h1></a>
         </div>
         <div align="center">
-            <img src="logo.jpg" width="100" height="100">
+            <img src="LOGO.jpg" width="100" height="100">
             <a href="user.html"><h1>USER</h1></a>
         </div>
     </form>
