--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <form>
         <h1 align="center">Select What You are?</h1>
         <div align="center">
-            <img src="logo.jpg" width="100" height="100">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123rf.com%2Fphoto_34583214_stock-vector-logo-admin-icon-administrator-illustration-of-a-man-in-a-jacket-and-shirt-ties-jacket-and-shirt-.html&psig=AOvVaw0gJ5t_7wsNLtdk2q1ZS2m1&ust=1595779270381000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjqn5bj6OoCFQAAAAAdAAAAABAD" width="100" height="100">
             <a href="Admin.html"><h1>ADMIN</h1></a>
         </div>
         <div align="center">
-            <img src="LOGO.jpg" width="100" height="100">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123rf.com%2Fphoto_34583214_stock-vector-logo-admin-icon-administrator-illustration-of-a-man-in-a-jacket-and-shirt-ties-jacket-and-shirt-.html&psig=AOvVaw0gJ5t_7wsNLtdk2q1ZS2m1&ust=1595779270381000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPjqn5bj6OoCFQAAAAAdAAAAABAD" width="100" height="100">
             <a href="user.html"><h1>USER</h1></a>
         </div>
     </form>
