--- a/viewperq.html
+++ b/viewperq.html
@@ -4,13 +4,13 @@
 </head>
 <body>
     <form action="#" method="post">
-    <div>
-        <a href="aptq.html">Aptitude Questions</a>&nbsp;&nbsp;
-        <a href="perq.html">Persnality Questions</a>&nbsp;&nbsp;
-        <a href="#">Job Details</a>&nbsp;&nbsp;
-        <a href="index.html">Logout</a>
-      </div>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>
+            <a href="aptq.html">Aptitude Questions</a>&nbsp;&nbsp;
+            <a href="perq.html">Persnality Questions</a>&nbsp;&nbsp;
+            <a href="#">Job Details</a>&nbsp;&nbsp;
+            <a href="index.html">Logout</a>
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -35,44 +35,52 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewperq.html">Show Persnality Questions</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewperq.html">Show Personality Questions</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a>
 
-    <h1 align="center">Aptitude Questions</h1>
-    <div align="center">
-        <label>Type:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="type" required>
-            <option value="none">Choose One</option>
-            <option value="programming">programming</option>
-            <option value="maths">maths</option>
-            <option value="English">English</option>
-        </select>
-    </div><br><br>
-    <div align="center">
-        <label>Questions:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<textarea name="que" rows="5" cols="50" required placeholder="Write your question here"></textarea>
-    </div><br><br>
-    <div align="center">
-        <label>Option1:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op1" required>
-    </div><br><br>
-    <div align="center">
-        <label>Option2:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op2" required>
-    </div><br><br>    
-    <div align="center">
-        <label>Option3:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op3" required>
-    </div><br><br>
-    <div align="center">
-        <label>Option4:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op4" required>
-    </div><br><br><br>
-    <div align="center">
-        <label>Answer:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="Ans" required>
-    </div><br><br><br>
-    <div align="center">
-        <input type="submit" name="add" value="Add">
-    </div>
-</form>
+
+        <h1 align="center">Personality Questions</h1>
+        <table border="1" align="center">
+            <tr>
+                <td>1</td>
+                <td colspan="10"> 	
+                    A train running at the speed of 60 km/hr crosses a pole in 9 seconds. What is the length of the train?</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td colspan="10"> 	
+                    A train 125 m long passes a man, running at 5 km/hr in the same direction in which the train is going, in 10 seconds. The speed of the train is:</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td colspan="10"> 	
+                    A train passes a station platform in 36 seconds and a man standing on the platform in 20 seconds. If the speed of the train is 54 km/hr, what is the length of the platform?</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td colspan="10"> 	
+                    	A right triangle with sides 3 cm, 4 cm and 5 cm is rotated the side of 3 cm to form a cone. The volume of the cone so formed is</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td colspan="10"> 	
+                    	In a shower, 5 cm of rain falls. The volume of water that falls on 1.5 hectares of ground is:
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+        </table>
+    </form>
 </body>
-
 </html>
