--- a/editque.html
+++ b/editque.html
@@ -35,36 +35,73 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewperq.html">Show Persnality Questions</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewperq.html">Show Personality Questions</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a>
 
-        <h1 align="center">Job Requirement</h1>
+
+        <h1 align="center">Personality Questions</h1>
+        <table border="1" align="center">
+            <tr>
+                <td>1</td>
+                <td colspan="10"> 	
+                    A train running at the speed of 60 km/hr crosses a pole in 9 seconds. What is the length of the train?</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td colspan="10"> 	
+                    A train 125 m long passes a man, running at 5 km/hr in the same direction in which the train is going, in 10 seconds. The speed of the train is:</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td colspan="10"> 	
+                    A train passes a station platform in 36 seconds and a man standing on the platform in 20 seconds. If the speed of the train is 54 km/hr, what is the length of the platform?</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td colspan="10"> 	
+                    	A right triangle with sides 3 cm, 4 cm and 5 cm is rotated the side of 3 cm to form a cone. The volume of the cone so formed is</td>
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td colspan="10"> 	
+                    	In a shower, 5 cm of rain falls. The volume of water that falls on 1.5 hectares of ground is:
+                <td><a href="editque.html">Edit</a></td>
+                <td><a href="deleteque.html">Delete</a></td>
+            </tr>
+        </table>
         <div align="center">
-            <label>Job ID:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="jid" required>
-                <option value="none">--select--</option>
-                <option value="programming">id1 from database</option>
-                <option value="maths">id2 from database</option>
-                <option value="English">id3 from database</option>
-            </select><br>
-            <p> Job details of selected id from database</p>
+            <label>Questions:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<textarea name="que" rows="5" cols="50" required placeholder="default que"></textarea>
         </div><br><br>
         <div align="center">
-            <label>Experience:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="exp" required>
+            <label>Option1:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op1" placeholder="option1" required>
         </div><br><br>
         <div align="center">
-            <label>Qualification:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="qua" required>
+            <label>Option2:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op2" placeholder="option2" required>
         </div><br><br>    
         <div align="center">
-            <label>Key Skills:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="keyskill" required>
+            <label>Option3:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op3" placeholder="option2" required>
         </div><br><br>
         <div align="center">
-            <input type="submit" name="add" value="Add">
+            <label>Option4:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op4" placeholder="option4" required>
+        </div><br><br><br>
+        <div align="center">
+            <label>Answer:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="Ans" placeholder="default Answer" required>
+        </div><br><br><br>
+        <div align="center">
+            <input type="submit" name="add" value="Edit">
         </div>
     </form>
 </body>
 </html>
-    
