--- a/reg.html
+++ b/reg.html
@@ -3,7 +3,11 @@
     <title></title>
 </head>
 <body>
-    <form>
+    <form action="user.html" method="post">
+        <div align="left">
+            <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="user.html">Sign in</a>
+        </div>
         <h1 align="center">Registration</h1>
         <div align="center">
             <div>
@@ -20,10 +24,10 @@
             </div>
             <div >
                 <h1>Password:</h1> <input type="password" name="pswd" size="30"required>
-            </div>
+            </div><br><br>
             <div >
                 <h1>Cvs:</h1> <input type="file" name="files" multiple required>
-            </div>
+            </div><br>
             <div >
                 <input type="submit" value="upload" name="submit">
             </div>
