--- a/user.html
+++ b/user.html
@@ -4,6 +4,9 @@
 </head>
 <body>
     <form action="userpage.html">
+        <div align="left">
+            <a href="index.html">Home</a>
+        </div>
         <div align="center">
             <img src="logo.jpg" width="100" height="100">
         </div>
@@ -15,10 +18,10 @@
         <div align="center"><h1>Password:</h1></div>
         <div align="center">
             <input type="password" name="pswd" size="30"required>
-        </div>
+        </div><br><br><br>
         <div align="center">
             <input type="submit" value="submit" name="submit">
-        </div>
+        </div><br><br>
         <div align="center">
             <h1>Not a member?click <a href="reg.html">here</a></h1>
         </div>
