--- a/viewjobdetails.html
+++ b/viewjobdetails.html
@@ -4,13 +4,13 @@
 </head>
 <body>
     <form action="#" method="post">
-    <div>
-        <a href="aptq.html">Aptitude Questions</a>&nbsp;&nbsp;
-        <a href="perq.html">Persnality Questions</a>&nbsp;&nbsp;
-        <a href="#">Job Details</a>&nbsp;&nbsp;
-        <a href="index.html">Logout</a>
-      </div>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div>
+            <a href="aptq.html">Aptitude Questions</a>&nbsp;&nbsp;
+            <a href="perq.html">Persnality Questions</a>&nbsp;&nbsp;
+            <a href="#">Job Details</a>&nbsp;&nbsp;
+            <a href="index.html">Logout</a>
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -35,44 +35,51 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewperq.html">Show Persnality Questions</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewperq.html">Show Personality Questions</a><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a>
 
-    <h1 align="center">Aptitude Questions</h1>
-    <div align="center">
-        <label>Type:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="type" required>
-            <option value="none">Choose One</option>
-            <option value="programming">programming</option>
-            <option value="maths">maths</option>
-            <option value="English">English</option>
-        </select>
-    </div><br><br>
-    <div align="center">
-        <label>Questions:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<textarea name="que" rows="5" cols="50" required placeholder="Write your question here"></textarea>
-    </div><br><br>
-    <div align="center">
-        <label>Option1:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op1" required>
-    </div><br><br>
-    <div align="center">
-        <label>Option2:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op2" required>
-    </div><br><br>    
-    <div align="center">
-        <label>Option3:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op3" required>
-    </div><br><br>
-    <div align="center">
-        <label>Option4:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="op4" required>
-    </div><br><br><br>
-    <div align="center">
-        <label>Answer:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="Ans" required>
-    </div><br><br><br>
-    <div align="center">
-        <input type="submit" name="add" value="Add">
-    </div>
-</form>
+
+        <h1 align="center">Job Details</h1>
+        <table border="1" align="center">
+            <tr>
+                <td>JOB ID</td>
+                <td colspan="10">Designation</td>
+                <td>Salary</td>
+                <td>Place</td>
+            </tr>
+            <tr>
+                <td>101</td>
+                <td colspan="10"> 	
+                    System analyst</td>
+                <td>300000</td>
+                <td>Mumbai</td>
+            </tr>
+            <tr>
+                <td>102</td>
+                <td colspan="10"> 	
+                    Full stack developer</td>
+                <td>500000</td>
+                <td>Ahemdabad</td>
+            </tr>
+            <tr>
+                <td>103</td>
+                <td colspan="10"> 	
+                    Android developer</td>
+                <td>3000000</td>
+                <td>surat</td>
+            </tr>
+            <tr>
+                <td>104</td>
+                <td colspan="10"> 	
+                    Software engineer</td>
+                <td>300000</td>
+                <td>Naidad</td>
+            </tr>
+        </table>
+    </form>
 </body>
-
 </html>
