--- a/adminpage.html
+++ b/adminpage.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <head>
-    <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+  <link rel="stylesheet" href="navigationbar.css">
 </head>
 <body>
     <div>
-        <a href="aptq.html">Aptitude Questions</a>&nbsp;&nbsp;
-        <a href="perq.html">Persnality Questions</a>&nbsp;&nbsp;
-        <a href="#">Job Details</a>&nbsp;&nbsp;
+      <div class="sm">
+        <a href="aptq.html">AptitudeQuestions</a>
+        <a href="perq.html">PersnalityQuestions</a>
+        <a href="#">JobDetails</a>
         <a href="index.html">Logout</a>
       </div>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <div class="sm">
+        <a href="addjobdetails.html">AddJobDetails</a>
+      </div>
+      <div class="sm">
+        <a href="requirementdetails.html">AddRequirementdetails</a>
+      </div>
+      <div class="sm">
+        <a href="uploadcv.html">Uploadpreferedcvs</a>
+      </div>
+      <div class="sm">
+        <a href="viewaptq.html">ShowAptitudeQuestions</a>
+      </div>
+      <div class="sm">
+      <a href="viewperq.html">ShowPersnalityQuestions</a>
+      </div>
+      <div class="sm">
+      <a href="viewjobdetails.html">ShowJobDetails</a>
+      </div>
+        <!-- <a href="aptq.html">Aptitude Questions</a>&nbsp;&nbsp;
+        <a href="perq.html">Persnality Questions</a>&nbsp;&nbsp;
+        <a href="#">Job Details</a>&nbsp;&nbsp;
+        <a href="index.html">Logout</a> -->
+      <!-- </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -39,6 +66,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="viewjobdetails.html">Show Job Details</a><br> -->
+        
 
 </body>
