--- a/Admin.html
+++ b/Admin.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <head>
-    <title></title>
+    <meta charset="utf-8">
+    <title>َLogin Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="adminpage.html">
+    <form class="box" action="adminpage.html" method="post">
         <div align="left">
             <a href="index.html">Home</a>
         </div>
-        <div align="center">
+        <!-- <div align="center">
             <img src="logo.jpg" width="100" height="100">
-        </div>
-        <h1 align="center">Admin</h1>
-        <div align="center"><h1>Name:</h1></div>
+        </div> -->
+        <h1>Admin َLogin</h1>
+        <input type="text" name="" placeholder="Username" required>
+        <input type="password" name="" placeholder="Password" required>
+        <input type="submit" name="" value="Login">
+        <!-- <div align="center"><h1>Name:</h1></div>
         <div align="center">
             <input type="text" name="name" size="30" required>
         </div>
@@ -21,6 +26,6 @@
         </div><br><br><br>
         <div align="center">
             <input type="submit" value="submit" name="submit">
-        </div>
+        </div> -->
     </form>
 </body>
