--- a/user.html
+++ b/user.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <head>
-    <title></title>
+    <meta charset="utf-8">
+    <title>َLogin Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="userpage.html">
+    <form class="box" action="userpage.html">
         <div align="left">
             <a href="index.html">Home</a>
         </div>
-        <div align="center">
+        <!-- <div align="center">
             <img src="logo.jpg" width="100" height="100">
-        </div>
-        <h1 align="center">USER</h1>
-        <div align="center"><h1>Name:</h1></div>
-        <div align="center">
-            <input type="text" name="name" size="30" required>
-        </div>
-        <div align="center"><h1>Password:</h1></div>
-        <div align="center">
-            <input type="password" name="pswd" size="30"required>
-        </div><br><br><br>
-        <div align="center">
-            <input type="submit" value="submit" name="submit">
-        </div><br><br>
+        </div> -->
+        <h1>Candidate َLogin</h1>
+        <input type="text" name="" placeholder="Username" required>
+        <input type="password" name="" placeholder="Password" required>
+        <input type="submit" name="" value="Login">
         <div align="center">
             <h1>Not a member?click <a href="reg.html">here</a></h1>
         </div>
