--- a/reg.html
+++ b/reg.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <title></title>
+    <meta charset="utf-8">
+    <title>َRegisration Form</title>
+    <link rel="stylesheet" href="regs.css">
 </head>
 <body>
-    <form action="user.html" method="post">
-        <div align="left">
+    <form class="box" action="user.html" method="post">
+        <div>
             <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
             <a href="user.html">Sign in</a>
         </div>
@@ -24,7 +26,7 @@
             </div>
             <div >
                 <h1>Password:</h1> <input type="password" name="pswd" size="30"required>
-            </div><br><br>
+            </div>
             <div >
                 <h1>Cvs:</h1> <input type="file" name="files" multiple required>
             </div><br>
@@ -33,4 +35,4 @@
             </div>
         </div>
     </form>
-</body>
+</body> 
