--- a/Admin.html
+++ b/Admin.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form class="box" action="adminpage.html" method="post">
+    <form class="box" action="adminpage.html">
         <div align="left">
             <a href="index.html">Home</a>
         </div>
